--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^8.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^3.4.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "~11.2.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
