--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "angularx-qrcode": "^11.0.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.1",
     "rxjs": "~6.6.0",
