--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~11.2.7",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
@@ -24,7 +25,7 @@
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "uuid": "^3.4.0",
     "zone.js": "~0.11.3"
   },
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.0",
